--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,28 @@
-reflex==0.4.1
+blinker==1.4
+cloudpickle==2.2.1
+command-not-found==0.3
+coverage==7.3.4
+cryptography==3.4.8
+dbus-python==1.2.18
+distro-info==1.1+ubuntu0.2
+gyp==0.1
+jeepney==0.7.1
+launchpadlib==1.10.16
+more-itertools==8.10.0
+netifaces==0.11.0
+oauthlib==3.2.0
+openai==1.6.1
+pip==24.0
+pycryptodome==3.20.0
+PyGObject==3.42.1
+PyJWT==2.3.0
+python-apt==2.4.0+ubuntu3
+PyYAML==5.4.1
+reflex==0.4.7
+SecretStorage==3.3.1
+systemd-python==234
+ubuntu-pro-client==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+wadllib==1.3.6
+zipp==1.0.0
