--- a/requirements.txt
+++ b/requirements.txt
@@ -10,15 +10,18 @@ jeepney==0.7.1
 launchpadlib==1.10.16
 more-itertools==8.10.0
 netifaces==0.11.0
+numpy==1.26.4
 oauthlib==3.2.0
 openai==1.6.1
+pillow==10.3.0
 pip==24.0
+pipreqs==0.4.13
 pycryptodome==3.20.0
 PyGObject==3.42.1
 PyJWT==2.3.0
 python-apt==2.4.0+ubuntu3
 PyYAML==5.4.1
-reflex==0.4.7
+reflex==0.5.1
 SecretStorage==3.3.1
 systemd-python==234
 ubuntu-pro-client==8001
